# cvto

./: .gitignore  Cargo.toml  LICENCE  README.md  Taskfile.yml
.github/workflows/: add-artifacts-to-release.yml  build-and-test.yml
src/: main.rs  options.rs  transformations.rs
