[package]
name = "cvto"
description = "Utility for converting text data between structured formats"
categories = ["command-line-utilities"]
keywords = ["cli"]

version = "0.1.0"
edition = "2024"

rust-version = "1.87.0"
authors = ["Ivan Mashtak <deralusws@gmail.com>"]
repository = "https://github.com/iMashtak/cvto"
homepage = "https://github.com/iMashtak/cvto"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "=0.9.33"
toml = { version = "0.8", features = ["preserve_order"] }
java-properties = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = "2"
